# ChangeLog for sys-kernel/openvz-sources
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/openvz-sources/ChangeLog,v 1.240 2015/04/23 13:12:17 maksbotan Exp $

  23 Apr 2015; Maxim Koltsov <maksbotan@gentoo.org>
  -openvz-sources-2.6.32.104.1.ebuild, -openvz-sources-2.6.32.92.2.ebuild,
  -openvz-sources-2.6.32.92.3.ebuild, -openvz-sources-2.6.32.93.5.ebuild,
  -openvz-sources-2.6.32.94.7.ebuild:
  Clean old versions, thanks to Andreis Vinogradovs

*openvz-sources-2.6.32.106.4 (10 Apr 2015)

  10 Apr 2015; Vladimir Smirnov <civil@gentoo.org>
  +openvz-sources-2.6.32.106.4.ebuild:
  Version bump, thanks to Andreis Vinogradovs

*openvz-sources-2.6.32.104.1 (11 Mar 2015)

  11 Mar 2015; Vladimir Smirnov <civil@gentoo.org>
  +openvz-sources-2.6.32.104.1.ebuild, openvz-sources-2.6.32.94.7.ebuild:
  Version bump, thanks to Andreis Vinogradovs

*openvz-sources-2.6.32.94.7 (17 Nov 2014)

  17 Nov 2014; Peter Volkov <pva@gentoo.org>
  +openvz-sources-2.6.32.94.7.ebuild:
  Version bump, thank slepnoga for report

*openvz-sources-2.6.32.93.5 (17 Oct 2014)

  17 Oct 2014; Maxim Koltsov <maksbotan@gentoo.org>
  +openvz-sources-2.6.32.93.5.ebuild:
  Version bump, thanks to slepnoga

  13 Oct 2014; Peter Volkov <pva@gentoo.org> openvz-sources-2.6.32.93.4.ebuild:
  x86/amd64 stable, thank slepnoga.

*openvz-sources-2.6.32.93.4 (17 Aug 2014)

  17 Aug 2014; Maxim Koltsov <maksbotan@gentoo.org>
  +openvz-sources-2.6.32.93.4.ebuild:
  Bump to 2.6.32.93.4, thanks to slepnoga.

*openvz-sources-2.6.32.92.3 (27 Jul 2014)

  27 Jul 2014; Maxim Koltsov <maksbotan@gentoo.org>
  +openvz-sources-2.6.32.92.3.ebuild:
  Bump to new release, fized security bug #518108. Thanks to ago and slepnoga

  12 Jul 2014; Peter Volkov <pva@gentoo.org>
  -openvz-sources-2.6.32.90.5.ebuild, openvz-sources-2.6.32.92.2.ebuild:
  x86/amd64 stable, security bug #516900, thank Agostino Sarubbo for report.
  Drop old.
