@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile install postinst postrm preinst setup test unpack
+DEPEND=!build? ( sys-apps/sed >=sys-devel/binutils-2.11.90.0.31 )
+DESCRIPTION=Kernel sources with OpenVZ patchset
+EAPI=5
+HOMEPAGE=http://www.openvz.org
+IUSE=symlink build
+KEYWORDS=~amd64 ~ppc64 ~sparc ~x86
+LICENSE=GPL-2 freedist
+PDEPEND=!build? ( virtual/dev-manager )
+RDEPEND=!build? ( >=sys-libs/ncurses-5.2 sys-devel/make dev-lang/perl sys-devel/bc )
+RESTRICT=binchecks strip
+SLOT=2.6.32.108.1
+SRC_URI=mirror://kernel/linux/kernel/v2.6/linux-2.6.32.tar.xz http://download.openvz.org/kernel/branches/rhel6-2.6.32/042stab108.1/patches/patch-042stab108.1-combined.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	kernel-2	d38b702cdd3e6429d33d00f4a4f660cb	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=d8b7fb163f5a1cdd38cdd41725845359
