@@ -1,9 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST deblob-2.6.32 87081 SHA256 005d2f84037cb5fcc0c3d70e1ac26380763230fe91ae4d250ef5af08abff72a4 SHA512 f2f3f75bf3aa55276da5c1b27fa2531e51369491cbc6a07a4e76745b8fa8631a21681bc2504525734df0e6afb26c5b9910747e360a3ef6f012b0fc77ceff0ade WHIRLPOOL 6748bea8bf2687c5d4753c6ac4a809e43153a59de8a6a719a2a81b24ff9f3ee8a65ea6cc4b56b565644a81a42105d6c505b99135de1f6a2467112521e29e39ea
 DIST deblob-check-2.6.32 558238 SHA256 3cfe6a5d4048999924c78630fc050f50035606d2555327fd126c7309ea2e256c SHA512 3fce9cc56df0da5b7fce308026657afb65aec97a0249e5894286c52637ddf8de33b573e24ec377dcc8eed3341b4cc56bc4a32da7348e3b0aece4e9c0179d133a WHIRLPOOL bb9885ac9c53f37347024793184fcf6baf34ab82369cde5867829af98e98196c76cf9c1953f9ebe1fdfd5f468502e7dff56e1c6e9c6eaa5d64829e83797d8365
 DIST linux-2.6.32.tar.xz 52620720 SHA256 723106c298c5ba8733bb51ecc106b05e332a18490edc5f61cc6e57dbb36dcc46 SHA512 f8570daf2806eb191fce54cc7358577b0571bb295a75bd86db630d6136b328ae48e4732554b2d1886c64b0a0018bf0b9105dcface978a5005d1b77789aa40312 WHIRLPOOL bfcb4b186f7c4b60e69674a85d20a8e92b5efd05941b550401ef446cc6b20c9ed197f920d1cd9250c0e518c05308b9225f7ababe41cdfc83570412117b2ee555
 DIST patch-042stab093.4-combined.gz 48387253 SHA256 9ae5c849ad917ac10668f2099f7515aaa29d32ebee1f942e4cf1b961002b9df9 SHA512 1e289b2652c15e7ff173457b16e4803eb7549fac98283a7226dc5fb07db04bb543266da5c618a2fbbc0539e010da432741a9231a21dae12d1c2c6891948a65fc WHIRLPOOL cf8a2a88cc0d0be2de05b96c538b8b698a023fbac69c632a524c3ed19cbddf302699266ca1975f94027fc14eb79e406241013328fc599a12d30aab10f8a23147
 DIST patch-042stab106.4-combined.gz 52715854 SHA256 dffa7a1b5d8308ff403af9ac1b650ec1d3ddb47f3c29cfa3ff99e0d21dd452d0 SHA512 ea405c742936a44c439a09aec18ae0b127ec58a7c63386fbf42af7e9c623ba7d4738548b5ac7e2bc481a3b0c09e02c3b788fb7e63597666a5136978481913264 WHIRLPOOL 3314106b31e025ff277f03a485cc7d435936d4564a4ad658e08b693b2611323cb5ef8047629f5d57dee96724bdc106fa4947c57738028aecf51766ae493a9de8
+DIST patch-042stab108.1-combined.gz 52735259 SHA256 e9a8d108b58d3c68aeb15a38c408cfb59ace38eff0adbdbb947786ae3736aee0 SHA512 ee9cfe623986c0652ffc2b6747853212d1c66c5d97a56857fc63fbe3a9b0bcf31ec517f3853328ab30de56db4e153b42b6116b55d4eb5555fbd43338284eafe3 WHIRLPOOL 8d41e4445a9d737ae94a09475dcdad5099055a8f5f2ec08050d7a8951dfcf7aee613ff90f034028854d5a74df3cff743f948d9324a8430c2bcd41a59b8c86b7a
 EBUILD openvz-sources-2.6.32.106.4.ebuild 1693 SHA256 f5d963bd0f1c320f0e22d1033546f67792faf297c070ed83514bf96d30ae76b6 SHA512 71c9916fd8819443b97348911f72f4199f4452eb54e8c0ead138aa75960896f5c5590a55892dd024dd8f455a11084295910e163d8088eaecefedd1bb0eb9859a WHIRLPOOL 1e65487420a187fe7d694d6d87740794535c4348e974bef9b7322118598e8ff313b4de46eba5ebc1c650110231abe254c74a518930c86337cb4b2f899c9a87db
+EBUILD openvz-sources-2.6.32.108.1.ebuild 1697 SHA256 970757e83117072e15ab2a8f833fb8151e7f4b483487ef6d018d59828b088d03 SHA512 49f68f7bb6b5701c6483584cf7bd4a0329f6331b9cde68e6d62e38812c177ce2f6fc182b87d7c73d72b5c16053e13c6864b7042399e77f01ced58a6d850f94d0 WHIRLPOOL abbd9c4c4ff81df8c9771a1c229afc05649357f27c89d6a7b0fd7ab03e39fbd3d61ecb1f67b726c725d771b11379cd039b04d2872695ee52d18123cab8c3781e
 EBUILD openvz-sources-2.6.32.93.4.ebuild 1641 SHA256 2dff8eb3b28f0e5a0b3bed0f0490760f449211a86acd0b1ed6cf07a31fde0cdc SHA512 b72da30005ae5ad0848a9955ed7242a9fb1d77a2f727f9cbc2ecf020640e2271b5bad614d5344c1270ca13f870e7c5ae3fc3bbfd59a895a977e4b967c9d80585 WHIRLPOOL e01ebadbada254ee62c7a494a03f2039a15c579cfcde549870136f48dabf4b516193018873cf5fcb7f7f5fa4be97c055997f91b1055ddbbd36c89c30c4b53b6b
-MISC ChangeLog 56995 SHA256 5d72eb8a3c9106cf5f1b6a8d60c1d583f4e97c080f740539df10f72e2afea4a6 SHA512 f7661c08d3e62c271e172b70614d3d61738a4fb8253f46339ef92e57025870e8bc7641df264465093b6187ae8ede62c9518ff04f6bda54397b4b1873d9e82be7 WHIRLPOOL 290584d43b8fd530602475befc80756858dcb34ace8437d68b73a338b54b9b6b5535ff0e1b6a5be33b929b091939e667ba43073a3ab76f6a8663fa20eaa1163b
+MISC ChangeLog 57174 SHA256 4390602493b50d0339396ff680646e45afb4586e182509c751f91c900fe1571c SHA512 c7a7f658d667c6a112ad16165d5e27547eab4a31146524dff57c74dfcdde3d0c938579eece1542101b0091fd0fbc2b4d23ba6a8aa578c763e199eb94ab96ef73 WHIRLPOOL d277eb518e6286e9ebe655d85101e88e73107bf9b48f061902f2f363414509602af8872e627e6c4d665d61d9608d8e27901134bb9126dd7055ebb77feeb0c194
 MISC metadata.xml 977 SHA256 c45deb1ddf6e2bd61ed075036d0b4ce60989b134374e2342f98a3fe21af61727 SHA512 489e1724a69658474a9bc47ddc6af4fc2ba290fd9575c5b53b635743ec951cf40b9ec0dcbe945ed1dda55b5378e5e6f38f219f34f579fefda76de5ee87d84518 WHIRLPOOL b629eb462c15906b13661cc403fb95ac00e435985d8f2d99a801db7b4981b31ab667123bf344076e0dd0127aadb051cb5a86be31236df74dd92e1993f23eb938
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJVU7IvAAoJEAmJmMX429reMjkIAI/vGVne48e7n6jUwagevwoK
+VDxlQodHrY6nvB8+vZ/j6KR24WAeFcFhIkjSlVzFDgowYU6jkrWB7Yti8Eg0h810
+O6UKbAF6DlOV+rM4kfsC2ZSDn638rluQC8MrtVdaZGtwzCRrM9U1f8i/7jSkUjNe
+9pAa7YbyTRTiwEBE13ivjFjWi6sGa2TAkfQXWwNmresZRQ5dItx6KWo8HxIlg9MN
+K24dqxVAyuQYRcosHUddadv9PAfhGExbylJCvaq8JUJHHcAAUxhYCU8D5spWsanC
+QTdn3VqLrtTG7NDe4Tyk5GNpUwlTeYu07B7CgimQ+gLOTx5hDNy1OYqz2UZpdVw=
+=f3EJ
+-----END PGP SIGNATURE-----
