@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/openvz-sources
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/openvz-sources/ChangeLog,v 1.240 2015/04/23 13:12:17 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/openvz-sources/ChangeLog,v 1.241 2015/05/13 20:21:54 maksbotan Exp $
+
+*openvz-sources-2.6.32.108.1 (13 May 2015)
+
+  13 May 2015; Maxim Koltsov <maksbotan@gentoo.org>
+  +openvz-sources-2.6.32.108.1.ebuild:
+  Bump to 2.6.32.108.1, thanks to slepnoga
 
   23 Apr 2015; Maxim Koltsov <maksbotan@gentoo.org>
   -openvz-sources-2.6.32.104.1.ebuild, -openvz-sources-2.6.32.92.2.ebuild,
